--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,6 @@ npm-debug.log
 
 # Environment Variables should NEVER be published
 # For learning purposes we will leave .env visible, but make sure you never push it when working on your projects  
-# .env
+.env
 
 package-lock.json
