--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.1.2",
     "morgan": "^1.9.1",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0"
   },
